--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kvantovaya — Тест на определение ведущего драйвера</title>
   <style>
-    /* Сброс и базовые стили */
     * {
       box-sizing: border-box;
     }
@@ -21,14 +20,12 @@
       align-items: center;
       padding: 1rem;
     }
-
     header {
       width: 100%;
       max-width: 600px;
       margin-bottom: 1rem;
       text-align: center;
     }
-
     header h1 {
       font-size: 2.5rem;
       font-weight: 700;
@@ -36,7 +33,6 @@
       margin: 0;
       user-select: none;
     }
-
     main {
       background: #fff;
       border-radius: 12px;
@@ -46,30 +42,26 @@
       padding: 1.5rem 2rem;
       display: flex;
       flex-direction: column;
-      min-height: 400px;
+      min-height: 480px;
     }
-
     .question-number {
       font-weight: 600;
       color: #34495e;
       margin-bottom: 0.5rem;
       user-select: none;
     }
-
     .question-text {
       font-size: 1.2rem;
       margin-bottom: 1.2rem;
       line-height: 1.4;
       user-select: none;
     }
-
     .answers {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       margin-bottom: 2rem;
     }
-
     label {
       background: #ecf0f1;
       padding: 0.8rem 1rem;
@@ -82,11 +74,9 @@
       align-items: center;
       gap: 0.75rem;
     }
-
     label:hover {
       background: #d0d7de;
     }
-
     input[type="radio"] {
       accent-color: #2980b9;
       cursor: pointer;
@@ -94,7 +84,6 @@
       width: 20px;
       height: 20px;
     }
-
     button {
       align-self: flex-end;
       padding: 0.7rem 1.5rem;
@@ -108,23 +97,19 @@
       transition: background-color 0.3s ease;
       user-select: none;
     }
-
     button:disabled {
       background-color: #95a5a6;
       cursor: not-allowed;
     }
-
     button:hover:not(:disabled) {
       background-color: #1c5980;
     }
-
     .result {
       font-size: 1.1rem;
       line-height: 1.5;
       color: #2c3e50;
       user-select: text;
     }
-
     .result-title {
       font-weight: 700;
       font-size: 1.3rem;
@@ -132,8 +117,18 @@
       color: #34495e;
       user-select: none;
     }
-
-    /* Адаптивность */
+    ul {
+      padding-left: 1.2rem;
+      margin: 0;
+    }
+    li {
+      margin-bottom: 0.4rem;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 1rem 0;
+    }
     @media (max-width: 480px) {
       main {
         padding: 1rem 1.2rem;
@@ -154,129 +149,97 @@
   <header>
     <h1>Kvantovaya</h1>
   </header>
-  <main id="app">
-    <!-- Контент теста будет динамически вставляться сюда -->
-  </main>
+  <main id="app"></main>
 
   <script>
-    /*
-      Тест на определение ведущего драйвера (Driver Questionnaire)
-      Использует модель драйверов по Джули Хэй (1992)
-      Варианты ответов: Да / В некоторой степени / Нет
-      Каждый ответ начисляет баллы по соответствующим драйверам.
-      После прохождения выводится результат с подсчетом баллов.
-    */
-
-    // Список драйверов (рабочих стилей)
+    // 5 драйверов с описаниями
     const drivers = [
-      { id: "be_perfect", name: "Будь совершенным" },
-      { id: "be_strong", name: "Будь сильным" },
-      { id: "try_hard", name: "Старайся изо всех сил" },
-      { id: "please", name: "Угождай" },
-      { id: "hurry_up", name: "Поторопись" }
-    ];
-
-    // Вопросы теста
-    // Каждый вопрос связан с одним или несколькими драйверами и имеет вес для каждого драйвера
-    // Вес — количество баллов, которые начисляются за ответ "Да" (2 балла), "В некоторой степени" (1 балл), "Нет" (0 баллов)
-    // Структура: { text: "Вопрос", scores: { driver_id: weight, ... } }
-    const questions = [
       {
-        text: "Я стремлюсь делать всё идеально и без ошибок.",
-        scores: { be_perfect: 1 }
+        id: "be_perfect",
+        name: "Будь совершенным",
+        description: "Стремление к идеальности, внимательность к деталям, высокая требовательность к себе и окружающим. Сильная сторона — качество и аккуратность, слабая — перфекционизм и самокритичность."
       },
       {
-        text: "Мне важно выглядеть сильным и независимым в любой ситуации.",
-        scores: { be_strong: 1 }
+        id: "be_strong",
+        name: "Будь сильным",
+        description: "Желание быть независимым, контролировать ситуацию, не показывать слабость. Сильная сторона — стойкость и решительность, слабая — эмоциональная закрытость и напряжённость."
       },
       {
-        text: "Я всегда стараюсь приложить максимум усилий, даже если задача сложная.",
-        scores: { try_hard: 1 }
+        id: "try_hard",
+        name: "Старайся изо всех сил",
+        description: "Постоянное усилие и настойчивость, желание преодолевать трудности. Сильная сторона — упорство и трудолюбие, слабая — переутомление и излишняя самокритика."
       },
       {
-        text: "Мне важно угодить другим и получить их одобрение.",
-        scores: { please: 1 }
+        id: "please",
+        name: "Угождай",
+        description: "Стремление получить одобрение окружающих, желание помогать и быть нужным. Сильная сторона — коммуникабельность и дружелюбие, слабая — зависимость от мнения других и трудности с отказом."
       },
       {
-        text: "Я часто тороплюсь, чтобы быстрее завершить дела.",
-        scores: { hurry_up: 1 }
-      },
-      {
-        text: "Я не могу расслабиться, пока не доведу дело до идеала.",
-        scores: { be_perfect: 1 }
-      },
-      {
-        text: "Я предпочитаю не показывать свои слабости окружающим.",
-        scores: { be_strong: 1 }
-      },
-      {
-        text: "Даже если устал, я продолжаю стараться изо всех сил.",
-        scores: { try_hard: 1 }
-      },
-      {
-        text: "Мне сложно отказать, если кто-то просит о помощи.",
-        scores: { please: 1 }
-      },
-      {
-        text: "Я часто спешу и делаю несколько дел одновременно.",
-        scores: { hurry_up: 1 }
-      },
-      {
-        text: "Я чувствую давление быть безупречным в работе и жизни.",
-        scores: { be_perfect: 1 }
-      },
-      {
-        text: "Я стараюсь выглядеть уверенным и контролирующим ситуацию.",
-        scores: { be_strong: 1 }
-      },
-      {
-        text: "Я не сдаюсь, пока не достигну поставленной цели.",
-        scores: { try_hard: 1 }
-      },
-      {
-        text: "Мне важно, чтобы меня любили и принимали окружающие.",
-        scores: { please: 1 }
-      },
-      {
-        text: "Я часто тороплюсь, чтобы успеть всё сделать вовремя.",
-        scores: { hurry_up: 1 }
+        id: "hurry_up",
+        name: "Поторопись",
+        description: "Желание делать всё быстро, избегать задержек и промедлений. Сильная сторона — оперативность и энергичность, слабая — спешка и поверхностность."
       }
     ];
 
-    // Варианты ответов с соответствующими баллами
+    // 25 вопросов теста (взяты и адаптированы из классического Driver Questionnaire)
+    // Каждый вопрос связан с одним драйвером, вес 1
+    const questions = [
+      { text: "Я стремлюсь делать всё идеально и без ошибок.", scores: { be_perfect: 1 } },
+      { text: "Мне важно выглядеть сильным и независимым в любой ситуации.", scores: { be_strong: 1 } },
+      { text: "Я всегда стараюсь приложить максимум усилий, даже если задача сложная.", scores: { try_hard: 1 } },
+      { text: "Мне важно угодить другим и получить их одобрение.", scores: { please: 1 } },
+      { text: "Я часто тороплюсь, чтобы быстрее завершить дела.", scores: { hurry_up: 1 } },
+
+      { text: "Я не могу расслабиться, пока не доведу дело до идеала.", scores: { be_perfect: 1 } },
+      { text: "Я предпочитаю не показывать свои слабости окружающим.", scores: { be_strong: 1 } },
+      { text: "Даже если устал, я продолжаю стараться изо всех сил.", scores: { try_hard: 1 } },
+      { text: "Мне сложно отказать, если кто-то просит о помощи.", scores: { please: 1 } },
+      { text: "Я часто спешу и делаю несколько дел одновременно.", scores: { hurry_up: 1 } },
+
+      { text: "Я чувствую давление быть безупречным в работе и жизни.", scores: { be_perfect: 1 } },
+      { text: "Я стараюсь выглядеть уверенным и контролирующим ситуацию.", scores: { be_strong: 1 } },
+      { text: "Я не сдаюсь, пока не достигну поставленной цели.", scores: { try_hard: 1 } },
+      { text: "Мне важно, чтобы меня любили и принимали окружающие.", scores: { please: 1 } },
+      { text: "Я часто тороплюсь, чтобы успеть всё сделать вовремя.", scores: { hurry_up: 1 } },
+
+      { text: "Я стараюсь избегать ошибок любой ценой.", scores: { be_perfect: 1 } },
+      { text: "Я предпочитаю решать проблемы самостоятельно, не показывая слабость.", scores: { be_strong: 1 } },
+      { text: "Я прикладываю максимум усилий, даже если это утомительно.", scores: { try_hard: 1 } },
+      { text: "Мне важно, чтобы мои действия нравились другим.", scores: { please: 1 } },
+      { text: "Я не люблю терять время и стараюсь делать всё быстро.", scores: { hurry_up: 1 } },
+
+      { text: "Я часто критикую себя за несовершенство.", scores: { be_perfect: 1 } },
+      { text: "Я стараюсь быть стойким и не показывать эмоции.", scores: { be_strong: 1 } },
+      { text: "Я продолжаю работать, даже когда силы на исходе.", scores: { try_hard: 1 } },
+      { text: "Я часто соглашаюсь на просьбы, даже если это неудобно.", scores: { please: 1 } },
+      { text: "Я предпочитаю быстро завершать дела, не задерживаясь.", scores: { hurry_up: 1 } }
+    ];
+
+    // Варианты ответов с баллами
     const answers = [
       { text: "Да", value: 2 },
       { text: "В некоторой степени", value: 1 },
       { text: "Нет", value: 0 }
     ];
 
-    // Состояние приложения
     let currentQuestionIndex = 0;
-    // Для хранения ответов пользователя: массив чисел (0,1,2) по индексу вопроса
     const userAnswers = new Array(questions.length).fill(null);
-
-    // Ссылка на контейнер для рендеринга
     const app = document.getElementById("app");
 
-    // Функция рендеринга текущего вопроса
     function renderQuestion() {
       const q = questions[currentQuestionIndex];
 
-      // Создаем заголовок с номером вопроса
       const questionNumber = document.createElement("div");
       questionNumber.className = "question-number";
       questionNumber.textContent = `Вопрос ${currentQuestionIndex + 1} из ${questions.length}`;
 
-      // Текст вопроса
       const questionText = document.createElement("div");
       questionText.className = "question-text";
       questionText.textContent = q.text;
 
-      // Контейнер для ответов
       const answersContainer = document.createElement("div");
       answersContainer.className = "answers";
 
-      // Создаем радио-кнопки для ответов
       answers.forEach((answer, i) => {
         const label = document.createElement("label");
         const input = document.createElement("input");
@@ -284,7 +247,6 @@
         input.name = "answer";
         input.value = answer.value;
         input.id = `answer-${i}`;
-        // Если пользователь уже выбирал ответ, отметим его
         if (userAnswers[currentQuestionIndex] === answer.value) {
           input.checked = true;
         }
@@ -293,32 +255,26 @@
         answersContainer.appendChild(label);
       });
 
-      // Кнопка "Далее" или "Завершить"
       const btn = document.createElement("button");
       btn.textContent = currentQuestionIndex === questions.length - 1 ? "Завершить" : "Далее";
       btn.disabled = userAnswers[currentQuestionIndex] === null;
 
-      // Обработчик изменения выбора ответа
       answersContainer.addEventListener("change", (e) => {
         const val = parseInt(e.target.value, 10);
         userAnswers[currentQuestionIndex] = val;
         btn.disabled = false;
       });
 
-      // Обработчик кнопки
       btn.addEventListener("click", () => {
-        if (userAnswers[currentQuestionIndex] === null) return; // Без ответа нельзя идти дальше
-
+        if (userAnswers[currentQuestionIndex] === null) return;
         if (currentQuestionIndex < questions.length - 1) {
           currentQuestionIndex++;
           renderApp();
         } else {
-          // Конец теста — считаем и показываем результат
           renderResult();
         }
       });
 
-      // Очищаем контейнер и вставляем новые элементы
       app.innerHTML = "";
       app.appendChild(questionNumber);
       app.appendChild(questionText);
@@ -326,48 +282,36 @@
       app.appendChild(btn);
     }
 
-    // Функция подсчета результатов и рендеринга результата
     function renderResult() {
-      // Подсчет баллов по драйверам
       const scores = {};
       drivers.forEach(d => scores[d.id] = 0);
 
-      // Проходим по всем ответам и суммируем баллы
       questions.forEach((q, idx) => {
-        const answerValue = userAnswers[idx]; // 0,1,2
-        // Для каждого драйвера у вопроса добавляем баллы * вес
+        const answerValue = userAnswers[idx];
         for (const [driverId, weight] of Object.entries(q.scores)) {
           scores[driverId] += answerValue * weight;
         }
       });
 
-      // Определяем максимальный балл
       const maxScore = Math.max(...Object.values(scores));
-
-      // Находим драйверы с максимальным баллом (может быть несколько)
       const leadingDrivers = drivers.filter(d => scores[d.id] === maxScore);
 
-      // Формируем текст результата
       let resultHTML = `<div class="result-title">Ваш ведущий рабочий стиль (драйвер):</div>`;
 
       if (maxScore === 0) {
         resultHTML += `<div class="result">По вашим ответам не выявлен выраженный ведущий драйвер.</div>`;
       } else {
         leadingDrivers.forEach(d => {
-          resultHTML += `<div class="result"><strong>${d.name}</strong></div>`;
+          resultHTML += `<div class="result"><strong>${d.name}</strong><br>${d.description}</div><hr>`;
         });
       }
 
-      // Дополнительно показываем баллы по всем драйверам
-      resultHTML += `<hr style="margin:1rem 0; border:none; border-top:1px solid #ccc;" />`;
-      resultHTML += `<div class="result-title">Баллы по всем драйверам:</div>`;
-      resultHTML += `<ul style="padding-left: 1.2rem; margin:0;">`;
+      resultHTML += `<div class="result-title">Баллы по всем драйверам:</div><ul>`;
       drivers.forEach(d => {
-        resultHTML += `<li>${d.name}: <strong>${scores[d.id]}</strong></li>`;
+        resultHTML += `<li><strong>${d.name}:</strong> ${scores[d.id]}</li>`;
       });
       resultHTML += `</ul>`;
 
-      // Кнопка для повторного прохождения теста
       resultHTML += `<button id="restart-btn" style="margin-top:1.5rem;">Пройти тест заново</button>`;
 
       app.innerHTML = resultHTML;
@@ -379,7 +323,6 @@
       });
     }
 
-    // Главная функция рендеринга приложения
     function renderApp() {
       if (currentQuestionIndex < questions.length) {
         renderQuestion();
@@ -388,7 +331,6 @@
       }
     }
 
-    // Запускаем тест при загрузке страницы
     renderApp();
   </script>
 </body>
